// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`finds all errors in example '"1" 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number or string as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '"1" 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "id": "8",
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "value": 2,
          },
          "id": "6",
          "type": "number",
        },
      ],
      "data": {},
      "id": "4",
      "type": "application",
    },
  ],
  "data": {},
  "id": "7",
  "type": "script",
}
`;

exports[`finds all errors in example '(' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "must be closed with ")" by that point",
        "start": 1,
      },
      {
        "end": 1,
        "kind": "primary",
        "message": "opening token "(" here",
        "start": 0,
      },
    ],
    "message": "Missing closing token",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '(' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "id": "3",
          "type": "implicit_placeholder",
        },
      ],
      "data": {},
      "id": "4",
      "type": "parens",
    },
  ],
  "data": {},
  "id": "6",
  "type": "script",
}
`;

exports[`finds all errors in example '({ 1 )' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 1,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '({ 1 )' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": 1,
              },
              "id": "13",
              "type": "number",
            },
          ],
          "data": {},
          "id": "15",
          "type": "block",
        },
      ],
      "data": {},
      "id": "17",
      "type": "parens",
    },
  ],
  "data": {},
  "id": "18",
  "type": "script",
}
`;

exports[`finds all errors in example ')' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ')' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "id": "2",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "1",
  "type": "script",
}
`;

exports[`finds all errors in example '[' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "here",
        "start": 1,
      },
    ],
    "message": "Unexpected end of source",
    "notes": [],
    "type": "END_OF_SOURCE",
  },
]
`;

exports[`finds all errors in example '[' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "id": "5",
          "type": "implicit_placeholder",
        },
      ],
      "data": {},
      "id": "2",
      "type": "square_brackets",
    },
  ],
  "data": {},
  "id": "4",
  "type": "script",
}
`;

exports[`finds all errors in example ']' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ']' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "id": "2",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "1",
  "type": "script",
}
`;

exports[`finds all errors in example '{ (1 }' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{ (1 }' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": 1,
              },
              "id": "13",
              "type": "number",
            },
          ],
          "data": {},
          "id": "15",
          "type": "parens",
        },
      ],
      "data": {},
      "id": "17",
      "type": "block",
    },
  ],
  "data": {},
  "id": "18",
  "type": "script",
}
`;

exports[`finds all errors in example '{' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "id": "3",
          "type": "implicit_placeholder",
        },
      ],
      "data": {},
      "id": "4",
      "type": "block",
    },
  ],
  "data": {},
  "id": "6",
  "type": "script",
}
`;

exports[`finds all errors in example '}' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '}' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "id": "2",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "1",
  "type": "script",
}
`;

exports[`finds all errors in example '1 *' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 *' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": 1,
          },
          "id": "2",
          "type": "number",
        },
        {
          "children": [],
          "data": {},
          "id": "7",
          "type": "implicit_placeholder",
        },
      ],
      "data": {},
      "id": "4",
      "type": "*",
    },
  ],
  "data": {},
  "id": "6",
  "type": "script",
}
`;

exports[`finds all errors in example '1 +' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 +' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": 1,
          },
          "id": "2",
          "type": "number",
        },
        {
          "children": [],
          "data": {},
          "id": "7",
          "type": "implicit_placeholder",
        },
      ],
      "data": {},
      "id": "4",
      "type": "add",
    },
  ],
  "data": {},
  "id": "6",
  "type": "script",
}
`;

exports[`finds all errors in example '1 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "id": "8",
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "value": 2,
          },
          "id": "6",
          "type": "number",
        },
      ],
      "data": {},
      "id": "4",
      "type": "application",
    },
  ],
  "data": {},
  "id": "7",
  "type": "script",
}
`;

exports[`finds all errors in example 'x[(1]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[(1]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "x",
          },
          "id": "13",
          "type": "name",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": 1,
              },
              "id": "26",
              "type": "number",
            },
          ],
          "data": {},
          "id": "28",
          "type": "parens",
        },
      ],
      "data": {},
      "id": "30",
      "type": "index",
    },
  ],
  "data": {},
  "id": "31",
  "type": "script",
}
`;

exports[`finds all errors in example 'x[{ 1 ]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 5,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[{ 1 ]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "x",
          },
          "id": "13",
          "type": "name",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": 1,
              },
              "id": "26",
              "type": "number",
            },
          ],
          "data": {},
          "id": "28",
          "type": "block",
        },
      ],
      "data": {},
      "id": "30",
      "type": "index",
    },
  ],
  "data": {},
  "id": "31",
  "type": "script",
}
`;
